--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body {
 ul {
     list-style-type: none;
     display: flex;
-    
 }
 
 a {
@@ -31,4 +30,16 @@ a {
     gap: 12px;
     font-size: 16px;
     margin: 12px;
+}
+
+.headerlower {
+    display: flex;
+    flex-direction: column;
+    background-color: #1f2937;
+    color: #F9FAF8;
+    font-size: 24px;
+    font-weight: 900;
+    flex: 0 1 0;
+    justify-content: center;
+    align-items: center;
 }
