--- a/style.css
+++ b/style.css
@@ -37,25 +37,27 @@ a {
     display: flex;
     background-color: #1f2937;
     color: #E5E7EB;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 .hl-img {
-    display: flex;
-    justify-content: left;
-    align-content: center;
     padding: 40px;
-    flex-direction: column;
-    width: 400px;
+    justify-content: space-between;
+    width: 800px;
 }
 
 .hl-img-two {
-    display: flex;
     height: 100px;
     width: 100px;
-    justify-content: flex-end;
+
+    width: 100px;
+    height: 100px;
+    background: #3882F6;
+    border-radius: 5px;
+
+    margin-right: 20px;
 }
 
 .midline {
