--- a/style.css
+++ b/style.css
@@ -107,7 +107,9 @@ a {
     padding: 20px;
     margin: 20px;
     justify-content: space-between;
+    align-items: center;
     border-radius: 5px;
+    color: white;
 
 }
 
@@ -133,11 +135,17 @@ a {
 }
 
 .box button {
-    height: 50px;
+    height: 25px;
     width: 100px;
+    background-color: #3882F6;
+    color: white;
+    border-radius: 5px;
 }
 
 .hl-img button {
-    height: 50px;
+    height: 25px;
     width: 100px;
+    background-color: #3882F6;
+    color: white;
+    border-radius: 5px;
 }
