--- a/style.css
+++ b/style.css
@@ -88,9 +88,20 @@ a {
 }
 
 .botline {
+    display: flex;
     background-color: #E5E7EB;
     font: 36px #1F2937;
     padding: 32px;
+}
+
+.botline p {
+    flex: 1;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    margin: auto;
+    padding: 50px 0px 50px 0px;
+    font-style: italic;
+    font-size: 20px;
 }
 
 .sign-up {
