--- a/style.css
+++ b/style.css
@@ -46,16 +46,16 @@ a {
     padding: 40px;
     justify-content: space-between;
     width: 800px;
+    margin-left: 70px;
+    
 }
 
 .hl-img-two {
-    height: 100px;
-    width: 100px;
-    width: 100px;
-    height: 100px;
+    height: 200px;
+    width: 400px;
     background: #3882F6;
     border-radius: 5px;
-    margin-right: 20px;
+    margin-right: 70px;
 }
 
 .midline {
