--- a/style.css
+++ b/style.css
@@ -113,14 +113,21 @@ a {
     background-color: #E5E7EB;
     font: 36px #1F2937;
     padding: 32px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.botline div {
+    font-weight: 600;
 }
 
 .botline p {
     flex: 1;
     flex-wrap: wrap;
     max-width: 1000px;
-    margin: auto;
-    padding: 50px 0px 50px 0px;
+    margin: 10px;
+    padding: 10px;
     font-style: italic;
     font-size: 20px;
 }
